add error condition for varargs match between record component and parameter in canonical ctor